solved related game page view content show

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="src/assets/game_icon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Game | Enjoy Your best game</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="src/assets/game_icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Default description for all pages.">
+  <meta property="og:title" content="Default Title">
+  <meta property="og:description" content="Default OG description.">
+  <meta property="og:image" content="https://yourwebsite.com/path-to-image/default-og-image.webp">
+  <link rel="canonical" href="https://naptechgames.com/">
+  <title>Default Title</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="./src/main.js"></script>
+</body>
+
 </html>
